mono (2.4+dfsg-4) unstable; urgency=low

  * debian/rules:
    + Removed the config.make hack as that broke AMD64 builds and instead let
      the ./configure script from the configure-indep target create that file.

 -- Mirco Bauer <meebey@debian.org>  Sun, 14 Jun 2009 16:52:28 +0200

mono (2.4+dfsg-3) unstable; urgency=low

  * debian/control:
    + Change Section of prj2make-sharp to devel to match archive overrides.
    + Added replaces libmono-cairo1.0-cil to libmono-cairo2.0-cil, as the
      pkg-config file was moved from that. (Closes: #531006)
    + Added conflicts mono-{1,2}.0-runtime to mono-runtime to ensure
      aptitude is proposing a happy upgrade path.
  * debian/libmono-wcf3.0-cil.install:
    + Added missing System.IdentityModel development symlink.
      (Closes: #531496)
  * debian/shlibs.local
    debian/update-shlibs.local.sh:
    + Removed libgda-2 entry for the benefit of dh_clideps not picking that as
      Suggests for libmono-system-data{1,2}.0-cil up. (Closes: #531870)
  * debian/patches/fix_ppc_build_using_gcc-4.4_r131472.dpatch:
    + Fixes the build on PPC when using GCC 4.4.
  * debian/patches/disable_unavailable_cpu_optimizations_r133647.dpatch:
    + Disable CPU optimizations which might be unavailable (like SSE2 on
      Pentium 3).
  * debian/patches/fix_sparc_support_r134797.patch:
    + Fixes the hang for all applications when running on SPARC.
      (Closes: #531566)
  * debian/rules:
    + Implemented test target and run basic runtime tests as part of the build
      if nocheck wasn't passed via DEB_BUILD_OPTIONS.

 -- Mirco Bauer <meebey@debian.org>  Sat, 13 Jun 2009 16:56:43 +0200

mono (2.4+dfsg-2) unstable; urgency=low

  [ Jo Shields ]
  * debian/rules:
    + Implement workaround to force removal of /usr/share/doc symlinks
      on Ubuntu systems when upgrading from pre-2.4 packages
  * debian/control:
    + Add dependency on lsb-release to allow distro detection

  [ Mirco Bauer ]
  * Upload to unstable.