@@ -36,22 +36,8 @@ ifeq ($(DEB_BUILD_ARCH_OS), kfreebsd)
         CONF_FLAGS += --enable-minimal=aot
 endif
 
-ifeq ($(DEB_BUILD_ARCH), i386)
-	CONF_FLAGS += --with-sigaltstack=yes
-else ifeq ($(DEB_BUILD_ARCH), amd64)
-	CONF_FLAGS += --with-sigaltstack=yes
-else
-	CONF_FLAGS += --with-sigaltstack=no
-endif
-
-ifeq ($(DEB_BUILD_ARCH), arm)
-	CONF_FLAGS += --with-tls=pthread
-else ifeq ($(DEB_BUILD_ARCH), armeb)
-	CONF_FLAGS += --with-tls=pthread
-else ifeq ($(DEB_BUILD_ARCH), armel)
-	CONF_FLAGS += --with-tls=pthread --with-fpu=NONE
-else
-	CONF_FLAGS += --with-tls=__thread
+ifeq ($(DEB_BUILD_ARCH), armel)
+	CONF_FLAGS += --with-fpu=NONE
 endif
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
@@ -61,9 +47,11 @@ else
 endif
 
 ifneq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
-	TEST = true
+	MINI_TEST = true
+	MONO_TEST = true
 else
-	TEST = cd mono/tests && make test
+	MINI_TEST = cd mono/mini && make check
+	MONO_TEST = cd mono/tests && make test
 endif
 
 CONFIGURE =	CFLAGS="$(CFLAGS)" \
@@ -179,9 +167,11 @@ test-arch-stamp: configure-indep
 	cd mcs/class/System.Core && LC_ALL=C $(MAKE) PROFILE=net_2_0
 
 	# show time baby: run all tests
-	-$(TEST)
+	-$(MINI_TEST)
+	-$(MONO_TEST)
 
 	# clean up
+	cd mini/tests && $(MAKE) clean
 	cd mono/tests && $(MAKE) clean
 	# funny bug-459094.cs creates too long directory names which
 	# pbuilder is unable to remove, eh
